// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filterable 1`] = `
[
  [
    {
      "name": "ccc",
    },
  ],
]
`;

exports[`filterable 2`] = `[]`;

exports[`filterable 3`] = `
[
  [
    {
      "name": "ccc",
    },
  ],
  [
    {
      "name": "ddd",
    },
  ],
]
`;

exports[`filterable 4`] = `[]`;

exports[`filterable 5`] = `
[
  [
    {
      "name": "ccc",
    },
  ],
  [
    {
      "name": "ddd",
    },
  ],
  [
    {
      "name": "foo",
    },
  ],
]
`;

exports[`filterable 6`] = `
[
  [
    {
      "name": "foo",
    },
  ],
]
`;

exports[`map 1`] = `
[
  [
    "foo",
  ],
]
`;

exports[`should work 1`] = `
[
  [
    {
      "name": "foo",
    },
  ],
]
`;

exports[`should work 2`] = `
[
  {
    "type": "return",
    "value": Promise {},
  },
]
`;

exports[`should work 3`] = `
[
  [
    {
      "name": "foo",
    },
  ],
]
`;

exports[`should work 4`] = `
[
  {
    "type": "return",
    "value": Promise {},
  },
]
`;

exports[`should work 5`] = `
[
  [
    {
      "name": "foo",
    },
  ],
  [
    {
      "name": "bar",
    },
  ],
]
`;

exports[`should work 6`] = `
[
  {
    "type": "return",
    "value": Promise {},
  },
  {
    "type": "return",
    "value": Promise {},
  },
]
`;

exports[`should work 7`] = `
[
  [
    {
      "name": "foo",
    },
  ],
  [
    {
      "name": "bar",
    },
  ],
]
`;

exports[`should work 8`] = `
[
  {
    "type": "return",
    "value": Promise {},
  },
  {
    "type": "return",
    "value": Promise {},
  },
]
`;
